[package]
name = "logger"
version = "0.1.0"
authors = ["blueJpg <2238288979@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.11"

[[bin]]
name = "main"
path = "bin/main.rs"
