[package]
name = "logger"
version = "0.1.0"
authors = ["Heng <Heng30@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Heng30/rust-logger"
description = "A simple logger for dumping message to stdout or file"
keywords = ["log", "thread save"]

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.11"

[[bin]]
name = "main"
path = "bin/main.rs"
